compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__record_struct.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Struct(
            StructDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 8,
                        end: 14,
                        start_line: 2,
                        start_col: 8,
                    },
                },
                type_params: None,
                body: Record(
                    [
                        StructField {
                            attrs: [],
                            vis: Private,
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 2,
                                },
                                span: Span {
                                    start: 21,
                                    end: 25,
                                    start_line: 3,
                                    start_col: 5,
                                },
                            },
                            ty: Type {
                                kind: Path(
                                    TypePath {
                                        segments: [
                                            TypePathSegment {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 3,
                                                    },
                                                    span: Span {
                                                        start: 27,
                                                        end: 33,
                                                        start_line: 3,
                                                        start_col: 11,
                                                    },
                                                },
                                                args: None,
                                            },
                                        ],
                                        span: Span {
                                            start: 27,
                                            end: 33,
                                            start_line: 3,
                                            start_col: 11,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 27,
                                    end: 33,
                                    start_line: 3,
                                    start_col: 11,
                                },
                            },
                            span: Span {
                                start: 21,
                                end: 33,
                                start_line: 3,
                                start_col: 5,
                            },
                        },
                        StructField {
                            attrs: [],
                            vis: Private,
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 4,
                                },
                                span: Span {
                                    start: 39,
                                    end: 42,
                                    start_line: 4,
                                    start_col: 5,
                                },
                            },
                            ty: Type {
                                kind: Path(
                                    TypePath {
                                        segments: [
                                            TypePathSegment {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 5,
                                                    },
                                                    span: Span {
                                                        start: 44,
                                                        end: 47,
                                                        start_line: 4,
                                                        start_col: 10,
                                                    },
                                                },
                                                args: None,
                                            },
                                        ],
                                        span: Span {
                                            start: 44,
                                            end: 47,
                                            start_line: 4,
                                            start_col: 10,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 44,
                                    end: 47,
                                    start_line: 4,
                                    start_col: 10,
                                },
                            },
                            span: Span {
                                start: 39,
                                end: 47,
                                start_line: 4,
                                start_col: 5,
                            },
                        },
                        StructField {
                            attrs: [],
                            vis: Private,
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 6,
                                },
                                span: Span {
                                    start: 53,
                                    end: 58,
                                    start_line: 5,
                                    start_col: 5,
                                },
                            },
                            ty: Type {
                                kind: Path(
                                    TypePath {
                                        segments: [
                                            TypePathSegment {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 7,
                                                    },
                                                    span: Span {
                                                        start: 60,
                                                        end: 66,
                                                        start_line: 5,
                                                        start_col: 12,
                                                    },
                                                },
                                                args: Some(
                                                    TypeArgs {
                                                        args: [
                                                            Type(
                                                                Type {
                                                                    kind: Path(
                                                                        TypePath {
                                                                            segments: [
                                                                                TypePathSegment {
                                                                                    name: Spanned {
                                                                                        node: SymbolU32 {
                                                                                            value: 3,
                                                                                        },
                                                                                        span: Span {
                                                                                            start: 67,
                                                                                            end: 73,
                                                                                            start_line: 5,
                                                                                            start_col: 19,
                                                                                        },
                                                                                    },
                                                                                    args: None,
                                                                                },
                                                                            ],
                                                                            span: Span {
                                                                                start: 67,
                                                                                end: 73,
                                                                                start_line: 5,
                                                                                start_col: 19,
                                                                            },
                                                                        },
                                                                    ),
                                                                    span: Span {
                                                                        start: 67,
                                                                        end: 73,
                                                                        start_line: 5,
                                                                        start_col: 19,
                                                                    },
                                                                },
                                                            ),
                                                        ],
                                                        span: Span {
                                                            start: 66,
                                                            end: 74,
                                                            start_line: 5,
                                                            start_col: 18,
                                                        },
                                                    },
                                                ),
                                            },
                                        ],
                                        span: Span {
                                            start: 60,
                                            end: 74,
                                            start_line: 5,
                                            start_col: 12,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 60,
                                    end: 74,
                                    start_line: 5,
                                    start_col: 12,
                                },
                            },
                            span: Span {
                                start: 53,
                                end: 74,
                                start_line: 5,
                                start_col: 5,
                            },
                        },
                    ],
                ),
                span: Span {
                    start: 1,
                    end: 77,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 77,
        start_line: 2,
        start_col: 1,
    },
}
